--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 sudo: false
 language: go
 go:
-  - "1.9"
-  - "1.10"
+ # - "1.9"
+ # - "1.10"
   - "1.11"
-  - tip
+ # - tip
+
+script:
+ - GOOS=linux GOARCH=mipsle go build
+
 env:
   - GOOS=linux CGO=1
   - GOOS=linux CGO=0
